--- a/src/styles/burger.scss
+++ b/src/styles/burger.scss
@@ -8,8 +8,13 @@
     width: 40px;
     height: 35px;
     display: block;
-    margin-left: 10px;
     color: $darkGrey;
+    padding: 12px;
+    cursor: pointer;
+
+    &:visited {
+      color: red;
+    }
   }
 
   &__burger .burger-menu,
