--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -49,12 +49,20 @@
     }
 
     &-logo {
+      display: block;
       width: 68px;
       height: 72px;
       font-family: $Montserrat;
       font-weight: bold;
       font-size: 36px;
       margin-bottom: 65px;
+      text-decoration: none;
+      cursor: pointer;
+      transition: transform 0.5s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
 
       @media screen and (max-width: 768px) {
         margin: 0;
@@ -67,6 +75,12 @@
       height: 28px;
       width: 12px;
       margin-right: 25px;
+      cursor: pointer;
+      transition: transform 0.5s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
 
       @media screen and (max-width: 768px) {
         justify-self: end;
@@ -78,6 +92,12 @@
       background: url(../images/instagram.png) no-repeat center;
       height: 25px;
       width: 25px;
+      cursor: pointer;
+      transition: transform 0.5s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
 
       @media screen and (max-width: 768px) {
         justify-self: end;
@@ -229,20 +249,35 @@
   }
 }
 
-.nav__list {
-  display: grid;
-  grid-template-columns: repeat(2, 140px);
-  grid-template-rows: repeat(4, 14px);
-  grid-auto-flow: column;
-  column-gap: 100px;
-  row-gap: 20px;
-  width: 135px;
-  height: 120px;
-  font-family: $IBM;
-  font-size: 14px;
-  color: $darkGrey;
+.nav {
+  width: 100%;
 
-  @media screen and (max-width: 768px) {
-    column-gap: 40px;
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(2, 140px);
+    grid-template-rows: repeat(4, 14px);
+    grid-auto-flow: column;
+    column-gap: 100px;
+    row-gap: 20px;
+    width: 135px;
+    height: 120px;
+    font-family: $IBM;
+    font-size: 14px;
+    color: $darkGrey;
+
+    @media screen and (max-width: 768px) {
+      column-gap: 40px;
+    }
+  }
+
+  &__item {
+    display: inline-flex;
+    align-content: flex-end;
+    line-height: 100%;
+  }
+
+  &__link {
+    text-decoration: none;
+    color: $darkGrey;
   }
 }
