--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -18,30 +18,40 @@
       color: white;
     }
   }
+
+  &__nav2 {
+    display: none;
+    width: 100%;
+    background-color: yellowgreen;
+
+    &__list {
+      height: 90px;
+      align-items: flex-end;
+      font-family: $Oswald;
+      font-size: 14px;
+      padding-bottom: 14px;
+
+      text-decoration: none;
+    }
+
+    &__item {
+      display: inline-flex;
+      align-content: flex-end;
+      line-height: 100%;
+    }
+
+    &__link {
+      list-style: none;
+      text-decoration: none;
+      color: $darkGrey;
+    }
+  }
 }
 
-.nav {
-  display: none;
-  width: 100%;
+.header__nav2:hover {
+  display: block;
+}
 
-  &__list {
-    display: flex;
-    gap: 0 50px;
-    height: 90px;
-    align-items: flex-end;
-    font-family: $Oswald;
-    font-size: 14px;
-    padding-bottom: 14px;
-  }
-
-  &__item {
-    display: inline-flex;
-    align-content: flex-end;
-    line-height: 100%;
-  }
-
-  &__link {
-    text-decoration: none;
-    color: $darkGrey;
-  }
+.burger:active .header__nav2 {
+  display: block;
 }
