--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "utils";
 @import "header";
-@import "reset";
+@import "normalize";
 @import "burger";
 @import "cutaway";
 @import "container";
