--- a/src/styles/sub.scss
+++ b/src/styles/sub.scss
@@ -59,6 +59,12 @@
       background: url(../images/Vector.svg) no-repeat center;
 
       background-color: $classicRed;
+      cursor: pointer;
+      transition: background-color 0.5s;
+
+      &:hover {
+        background-color: $darkGreen;
+      }
     }
   }
 
