--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -74,6 +74,20 @@
       object-fit: cover;
     }
 
+    &1,
+    &2,
+    &3,
+    &4,
+    &5,
+    &6 {
+      transition: transform 0.5s;
+      cursor: pointer;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+
     @media screen and (max-width: 1440px) {
       grid-template-columns: repeat(12, 1fr);
 
