--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body,
 h1,
 ul,
@@ -16,8 +20,4 @@ body {
   margin: 0 auto;
   max-width: 1920px;
   background-color: $pageColor;
-
-  @media screen and (min-width: 900px) {
-    // max-width: 1400px;
-  }
 }
