added requested changes & favicon icon

--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -69,9 +69,9 @@
     text-transform: uppercase;
     margin-bottom: 70px;
 
-    &--white {
+    &--transparent {
       -webkit-text-stroke: 1px #0f0e08;
-      color: #fff;
+      color: transparent;
     }
   }
 
