finish effect &  adaptiv all sections

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -7,14 +7,32 @@
   background-color: #1a5a4c;
   cursor: pointer;
 
-  &__icon {
-    width: 24px;
-    height: 24px;
-    background: url("../images/icon/arrow_button.svg") no-repeat center;
+  &--red {
+    background-color: #f14a27;
   }
 
   @media (min-width: 768px) {
     width: 70px;
     height: 70px;
   }
+
+  &__icon {
+    display: block;
+    width: 24px;
+    height: 24px;
+    background-image: url("../images/icon/arrow_button.svg") ;
+    transition: transform 0.3s linear;
+
+    &--delay {
+      transition: transform 0.3s linear 0.3s;
+    }
+  }
+
+  &:hover &__icon {
+    transform: translateX(7px);
+  }
+}
+
+.promo-button:hover .button__icon {
+  transform: translateX(7px);
 }
