--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -1,6 +1,39 @@
 .content {
+  &__promo {
+    @media (min-width: 768px) {
+      margin-bottom: 90px;
+    }
+
+    @media (min-width: 1024px) {
+      margin-bottom: 100px;
+    }
+  }
 
   &__lecture {
     margin-bottom: 167px;
+
+    @media (min-width: 768px) {
+      margin-bottom: 210px;
+    }
+  }
+
+  &__gallery {
+    margin-bottom: 70px;
+
+    @media (min-width: 768px) {
+      margin-bottom: 90px;
+    }
+
+    @media (min-width: 1250px) {
+      margin-bottom: 100px;
+    }
+  }
+
+  &__subscribe {
+    margin-bottom: 50px;
+
+    @media (min-width: 1921px) {
+      margin: 0 auto 60px;
+    }
   }
 }
