--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -13,6 +13,7 @@
 
   @media (min-width: 1250px) {
     text-align: start;
+    margin-bottom: 100px;
   }
 
   @media (min-width: 1801px) {
@@ -20,7 +21,7 @@
   }
 
   &__link {
-    @extend %mark;
+    @include hover(transform, scale(1.2));
 
     &--rotate {
       display: none;
@@ -48,7 +49,7 @@
         display: block;
         position: absolute;
         top: 522px;
-        left: 47px;
+        left: 42px;
       }
 
       @media (min-width: 1368px) {
@@ -57,7 +58,11 @@
 
       @media (min-width: 1801px) {
         top: 522px;
-        left: 175px;
+        left: 170px;
+      }
+
+      @media (min-width: 1921px) {
+        display: none;
       }
     }
   }
@@ -129,6 +134,18 @@
 
     @media (min-width: 1250px) {
       margin-bottom: 0;
+    }
+
+    @media (min-width: 1801px) {
+      display: none;
+    }
+
+    &--large {
+      display: none;
+
+      @media (min-width: 1801px) {
+        display: block;
+      }
     }
   }
 
