--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -7,6 +7,11 @@
     flex-direction: column;
   }
 
+  &__list {
+    width: fit-content;
+    @include hoverEffect(transform, scale(1.2));
+  }
+
   &__list:not(:last-child) {
     margin-bottom: 20px;
   }
