--- a/src/styles/_promo.scss
+++ b/src/styles/_promo.scss
@@ -3,12 +3,10 @@
     padding-left: calc(100% - 734px);
     display: flex;
     flex-direction: row-reverse;
-    margin-bottom: 90px;
   }
 
   @media (min-width: 1024px) {
     padding-left: 55px;
-    margin-bottom: 100px;
   }
 
   @media (min-width: 1250px) {
@@ -23,16 +21,20 @@
     padding-left: calc(100% - 1544px);
   }
 
+  @media (min-width: 1921px) {
+    padding: 0 calc(50% - 1900px / 2);
+  }
+
   &__image-wrapper {
     flex-grow: 1;
 
-    // @media (min-width: 1368px) {
-    //   height: 100vh;
-    // }
+    @media (min-width: 1368px) {
+      height: 100vh;
+    }
 
-    // @media (min-width: 1801px) {
-    //   height: auto;
-    // }
+    @media (min-width: 1801px) {
+      height: auto;
+    }
   }
 
   &__image {
@@ -90,6 +92,10 @@
       top: 235px;
       max-width: 300px;
     }
+
+    @media (min-width: 1921px) {
+      max-width: 500px;
+    }
   }
 
   &__title {
@@ -111,6 +117,10 @@
     @media (min-width: 1024px) {
       font-size: 72px;
       margin-bottom: 80px;
+    }
+
+    @media (min-width: 1921px) {
+      font-size: 110px;
     }
   }
 
