--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,21 +1,50 @@
 .footer {
-  padding: 50px 20px;
+  padding: 0 20px 48px;
+
+  @media (min-width: 768px) {
+    padding: 0 34px 36px;
+  }
+
+  @media (min-width: 1024px) {
+    padding: 0 55px 36px;
+  }
+
+  @media (min-width: 1801px) {
+    padding: 0 calc(50% - 1570px / 2);
+  }
 
   &__container {
     display: flex;
     flex-direction: column;
     font-size: 14px;
+
+    @media (min-width: 768px) {
+      display: flex;
+      flex-direction: row;
+    }
   }
 
   &__media {
     display: flex;
     justify-content: space-between;
     margin-bottom: 40px;
+
+    @media (min-width: 768px) {
+      flex-direction: column;
+      margin: 0 50px 0 0;
+      height: 158px;
+    }
+
+    @media (min-width: 1250px) {
+      margin-right: 90px;
+    }
   }
 
   &__logo {
     width: 63px;
     height: 72px;
+
+    @include hoverEffect(transform, scale(1.2));
   }
 
   &__links {
@@ -28,16 +57,30 @@
     height: 24px;
     margin-right: 20px;
     background: no-repeat center / contain url("../images/icon/icon_fb.svg");
+
+    @include hoverEffect(transform, scale(1.3));
   }
 
   &__link-insta {
     width: 24px;
     height: 24px;
     background: no-repeat center / contain url("../images/icon/icon_insta.svg");
+
+    @include hoverEffect(transform, scale(1.3));
   }
 
   &__content {
     margin-bottom: 70px;
+
+    @media (min-width: 768px) {
+      flex-grow: 1;
+      margin-bottom: 100px;
+    }
+
+    @media (min-width: 1250px) {
+      display: flex;
+      padding-right: calc(100% - 1061px);
+    }
   }
 
   &__info {
@@ -45,6 +88,15 @@
     justify-content: space-between;
     position: relative;
     margin-bottom: 111px;
+    line-height: 21px;
+
+    @media (min-width: 768px) {
+      padding-right: 120px;
+    }
+
+    @media (min-width: 1250px) {
+      margin-bottom: 0;
+    }
 
     &::after {
       content: "";
@@ -54,6 +106,13 @@
       width: 100%;
       height: 1px;
       background: rgba(26, 90, 76, 0.5);
+
+      @media (min-width: 1250px) {
+        bottom: 95px;
+        right: -40px;
+        transform: rotate(90deg);
+        width: 260px;
+      }
     }
   }
 
@@ -68,10 +127,6 @@
     margin-bottom: 20px;
   }
 
-  // &__schedule-time {
-
-  // }
-
   &__schedule-paragraph {
     margin-top: 20px;
   }
@@ -79,6 +134,13 @@
   &__contacts {
     display: flex;
     flex-direction: column;
+  }
+
+  &__contacts-address,
+  &__contacts-phone,
+  &__contacts-email,
+  &__contacts-fax {
+    @include hoverEffect(transform, scale(1.2));
   }
 
   &__contacts-title {
@@ -89,6 +151,22 @@
     text-align: center;
     font-size: 12px;
     font-weight: 300;
+
+    @media (min-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+
+  &__nav {
+    @media (min-width: 768px) {
+      padding-right: 150px;
+    }
+
+    @media (min-width: 1250px) {
+      padding-right: 0;
+      flex-grow: 1;
+    }
   }
 
   &__designer {
