--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -3,14 +3,25 @@
   min-width: 283px;
   justify-content: space-between;
 
-  &__input {
-    padding-left: 31px;
-    flex-grow: 1;
-    font-family: "Montserrat", sans-serif;
-    font-size: 16px;
+  @media (min-width: 768px) {
+    width: 475px;
   }
 
-  &__button {
-    background-color: #f14a27;
+  @media (min-width: 1250px) {
+    width: 570px;
+  }
+
+  &__input {
+    padding: 0 10px 0 28px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+
+    @media (min-width: 768px) {
+      width: 395px;
+    }
+
+    @media (min-width: 1250px) {
+      width: 470px;
+    }
   }
 }
