--- a/src/styles/_lecture.scss
+++ b/src/styles/_lecture.scss
@@ -1,17 +1,41 @@
 .lecture {
+  @media (min-width: 1921px) {
+    padding: 0 calc(50% - 1900px / 2);
+  }
 
   &__image-wrapper {
     width: 100%;
     height: 210px;
 
     @media (min-width: 390px) {
-      height: 290px ;
+      height: 100%;
+    }
+
+    @media (min-width: 700px) {
+      width: 100%;
     }
   }
+
   &__image {
     max-width: 100%;
-    height: 100%;
+    max-height: 684px;
     object-fit: cover;
+
+    @media (min-width: 700px) {
+      width: 100%;
+    }
+
+    @media (min-width: 1250px) {
+      display: none;
+    }
+
+    &--large {
+      display: none;
+
+      @media (min-width: 1250px) {
+        display: block;
+      }
+    }
   }
 
   &__description-wrapper {
@@ -28,20 +52,30 @@
     margin: 0 auto;
     background-color: white;
     box-shadow: 0  2px rgba(26, 90, 76, 0.25);
+
+    @media (min-width: 700px) {
+      bottom: -120px;
+      width: 570px;
+      height: 204px;
+    }
   }
 
-  &__event-container {
+  &__event-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
+    margin: 25px auto 15px;
     width: 238px;
-    margin-top: 25px;
-    margin-bottom: 15px;
+
+    @media (min-width: 700px) {
+      width: 370px;
+      margin-top: 35px;
+      margin-bottom: 22px;
+    }
   }
 
-  &__mark {
-    @extend %mark;
+  &__link {
+    @include hover(transform, scale(1.2));
   }
 
   &__date {
@@ -52,5 +86,10 @@
     @extend %title;
     width: 236px;
     margin: 0 auto;
+
+    @media (min-width: 700px) {
+      width: 370px;
+      font-size: 36px;
+    }
   }
 }
