--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -3,7 +3,7 @@
     position: absolute;
     top: 33px;
     left: 23px;
-    z-index: 2;
+    z-index: 3;
 
     &--active {
       position: fixed;
@@ -20,6 +20,10 @@
 
     @media (min-width: 1801px) {
       left: 175px;
+    }
+
+    @media (min-width: 1921px) {
+      display: none;
     }
   }
 
@@ -81,33 +85,128 @@
   &__nav-wrapper {
     position: absolute;
     overflow: auto;
-    top: -200%;
+    top: -100%;
     left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 9px;
+    padding-bottom: 15px;
     width: 100%;
     height: 100vh;
     background-color: white;
     transition: all 0.3s ;
 
+    @media (min-width: 768px) {
+      padding: 15px 0 100px;
+    }
+
+    @media (min-height: 1024px) {
+      padding-bottom: 300px;
+    }
+
+    @media (min-width: 1250px) {
+      left: -100%;
+      top: 0;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      height: 100px;
+      padding: 0 20px 0 100px;
+      background-color: rgba($color: #fff, $alpha: 0.8);
+    }
+
+    @media (min-width: 1801px) {
+      padding: 0 calc(50% - 1544px / 2);
+    }
+
+    @media (min-width: 1921px) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 calc(50% - 1900px / 2);
+      height: 100px;
+
+      z-index: 2;
+    }
+
     &--active {
       position: fixed;
       top: 0;
-      z-index: 1;
+      z-index: 2;
+
+      @media (min-width: 1250px) {
+        left: 0;
+      }
     }
+  }
+
+  &__wrapper-logo {
+    display: block;
+    width: $logo-small-width;
+    height: $logo-small-height;
+    margin-bottom: 30px;
+
+    @include hover(transform, scale(1.2));
+
+    @media (min-width: 768px) {
+      width: $logo-width;
+      height: $logo-height;
+      margin-bottom: 130px;
+    }
+
+    @media (min-width: 1250px) {
+      margin: 0;
+    }
+
+    @media (min-width: 1801px) {
+      margin-left: 70px;
+    }
+  }
+
+  &__logo {
+    width: 100%;
   }
 
   &__list {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: end;
-    padding-top: 130px;
-    margin-left: 20px;
+    align-items: center;
     font-size: 28px;
     line-height: 2em;
+    text-align: center;
+    text-transform: uppercase;
+
+    @media (min-height: 1024px) {
+      justify-self: center;
+    }
+
+    @media (min-height: 1024px) {
+      font-size: 44px;
+    }
+
+    @media (min-width: 1250px) {
+      flex-direction: row;
+      font-size: 18px;
+    }
   }
 
   &__item {
     position: relative;
+
+    @media (min-width: 1250px) {
+      margin-right: 15px;
+    }
+
+    @media (min-width: 1921px) {
+      margin-right: 30px;
+    }
   }
 
   &__link {
