--- a/src/styles/_promo-button.scss
+++ b/src/styles/_promo-button.scss
@@ -1,9 +1,13 @@
 .promo-button {
   display: flex;
   max-width: 280px;
+  overflow: hidden;
 
   &__text {
-    padding: 13px 0;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-weight: 500;
     text-align: center;
     flex-grow: 1;
@@ -11,10 +15,29 @@
     text-transform: uppercase;
     border: 1px solid #1a5a4c;
 
-    @media (min-width: 768px) {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    &::before {
+      content: "";
+      position: absolute;
+      overflow: hidden;
+      left: -300px;
+      height: 100%;
+      width: 300px;
+      background-color: #1a5a4c;
+
+      z-index: -1;
+      transition: all 0.3s linear;
     }
+  }
+
+  &:hover &__text::before {
+    transform: translateX(149px);
+
+    @media (max-width: 768px) {
+      transform: translateX(229px);
+    }
+  }
+
+  &:hover &__text {
+    color: #d7dde3;
   }
 }
