--- a/src/styles/_subscribe.scss
+++ b/src/styles/_subscribe.scss
@@ -1,7 +1,25 @@
 .subscribe {
   padding: 0 calc(50% - 283px / 2);
   min-height: 386px;
-  background: url("../images/gallary/image_sub-small.png") no-repeat center / cover;
+  background: url("../images/gallary/image_subscribe-small.png") no-repeat center / cover;
+
+  @media (min-width: 768px) {
+    padding: 0 calc(50% - 475px / 2);
+    background-image: url("../images/gallary/image_subscribe.png");
+  }
+
+  @media (min-width: 1250px) {
+    height: 550px;
+  }
+
+  @media (min-width: 1801px) {
+    height: 650px;
+  }
+
+  @media (min-width: 1921px) {
+    padding: 0;
+    max-width: 1900px;
+  }
 
   &__block {
     display: flex;
@@ -11,9 +29,21 @@
 
   &__heading {
     @extend %heading;
-    margin-top: 55px;
-    margin-bottom: 30px;
+    margin: 55px 0 30px;
     color: #fff;
+
+    @media (min-width: 768px) {
+      font-size: 48px;
+      margin: 72px 0 20px;
+    }
+
+    @media (min-width: 1250px) {
+      margin-top: 140px;
+    }
+
+    @media (min-width: 1801px) {
+      margin-top: 175px;
+    }
   }
 
   &__text {
@@ -22,5 +52,9 @@
     line-height: 1.5em;
     text-align: center;
     color: #fff;
+
+    @media (min-width: 768px) {
+      margin-bottom: 66px;
+    }
   }
 }
