block gallery was added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,4 +9,5 @@ body {
 @import "header";
 @import "wrapper";
 @import "link-button";
-@import "current-events.scss"
+@import "current-events.scss";
+@import "gallery";
