block subscription was added

--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,5 +1,13 @@
 .gallery {
   padding-top: 216px;
+  padding-bottom: 100px;
+
+  @include tabletScreen {
+    padding-bottom: 90px;
+  }
+  @include mobileScreen {
+    padding-bottom: 70px;
+  }
 
   &__title {
     @include secondary-title-text;
