--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "section/text";
 @import "section/current-events/return";
 @import "section/current-events/dreams";
+@import "section/current-events/current__events";
 
 @import "section/insert/insert__transition";
 
