--- a/src/styles/section/gallery/gallery.scss
+++ b/src/styles/section/gallery/gallery.scss
@@ -1,14 +1,106 @@
 .gallery__picture {
-
   &__important {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    max-height: 100%;
+    flex: 0 0 40%;
 
     margin-bottom: 30px;
   }
 
   &__secondary {
     display: flex;
-    justify-content: space-between;
+    flex: 0 0 40%;
+
+    justify-content: center;
+  }
+}
+
+.important__img {
+  max-width: 100%;
+  max-height: 100%;
+  margin-right: 30px;
+  object-fit: contain;
+  transition: 3s;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.secondary__img {
+  margin-right: 30px;
+  max-width: 100%;
+  object-fit: contain;
+  transition: 3s;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 1599px) {
+  .important__img:hover {
+    transform: scale(1.1);
+    box-shadow: 0 6px 23px black;
+  }
+
+  .important__img--second {
+    margin-right: 0;
+  }
+
+  .important__img:last-child {
+    display: none;
+  }
+
+  .secondary__img:last-child {
+    display: none;
+  }
+
+  .secondary__img:hover {
+    transform: scale(1.1);
+    box-shadow: 0 6px 23px black;
+  }
+}
+
+@media (max-width: 1185px) {
+  .gallery__picture__important {
+    margin-left: -25px;
+  }
+
+  .important__img:last-child {
+    display: block;
+  }
+
+  .important__img--second {
+    display: none;
+  }
+}
+
+@media (max-width: 815px) {
+  .gallery__picture {
+    &__important {
+      margin-bottom: 0;
+    }
+  }
+
+  .important__img {
+    transform: scale(0.8);
+
+    &:hover {
+      transform: scale(0.7);
+    }
+  }
+
+  .important__img:first-child {
+    margin-left: 30px;
+  }
+
+  .important__img:last-child {
+    margin-left: -85px;
+  }
+
+  .secondary__img:first-child {
+    display: none;
   }
 }
