--- a/src/styles/section/insert/insert__transition.scss
+++ b/src/styles/section/insert/insert__transition.scss
@@ -3,10 +3,8 @@
   &__transition {
     position: relative;
     &__picture {
-      width: 99vw;
-      height: 674px;
+      width: 100vw;
       margin: 0 auto;
-      object-fit: cover;
       object-position: center;
     }
 
@@ -18,6 +16,8 @@
       padding: 45px 100px;
       background-color: white;
       box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+
+      transition: 1s;
     }
   }
 }
@@ -25,4 +25,15 @@
 .lecture {
   display: flex;
   justify-content: space-between;
+}
+
+@media (max-width: 815px) {
+  .insert__transition__picture {
+    max-width: 100%;
+  }
+
+  .insert__transition__text {
+    left: calc(50% - 450px / 2);
+    width: 450px;
+  }
 }
