--- a/src/styles/section/subscription/subscription.scss
+++ b/src/styles/section/subscription/subscription.scss
@@ -3,23 +3,27 @@
   position: relative;
 
   &__picture {
-    width: 98vw;
-    height: 674px;
+    max-width: 100%;
     margin: 0 auto;
     object-fit: cover;
-    object-position: center;
+    width: 100vw;
+    object-position: top center;
   }
 
   &__text {
     position: absolute;
-    top: 30%;
-    left: calc(50% - 400px / 2);
+    top: calc(50% - 200px / 2);
+    left: calc(50% - 600px / 2);
     width: 570px;
     height: 170px;
     color: white;
+
+    transition: 1s;
   }
 
   &__title {
+    font-size: 48px;
+    color: white;
     text-align: center;
     margin-bottom: 20px;
   }
@@ -46,5 +50,29 @@
   &__button {
     background-color: red;
     width: 70px;
+  }
+}
+
+@media (max-width: 990px) {
+  .subscription {
+    &__text {
+      left: calc(50% - 400px / 2);
+      width: 450px;
+      height: 150px;
+    }
+
+    &__input {
+      width: 350px;
+      height: 50px;
+    }
+
+    &__title {
+      font-size: 36px;
+      margin-bottom: 5px;
+    }
+
+    &__paragraph {
+      margin-bottom: 20px;
+    }
   }
 }
