--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,26 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "reset";
+@import "header";
 
 body {
   background: $c-gray;
+  font-family: $fontSecondary;
+}
+
+.container {
+  max-width: 1280px;
+  padding: 0 30px;
+  margin: 0 auto;
+}
+
+.button {
+  width: $column * 3 - $gridGap;
+  line-height: 60px;
+  margin-top: 60px;
+  display: inline-block;
+  background-color: $colorMainOrange;
+  text-align: center;
+  color: $colorLightGray;
 }
