--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,20 @@
+@import "vars";
+
 @mixin hover($_property, $_toValue) {
   transition: #{$_property} 0.3s;
   &:hover {
     #{$_property}: $_toValue;
   }
+}
+
+@mixin smallText ($color) {
+  color: $color;
+  line-height: 24px;
+}
+
+@mixin title ($fontSize, $lineHeight, $color) {
+  font-family: $fontMain;
+  font-size: $fontSize;
+  line-height: $lineHeight;
+  color: $color;
 }
