--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
 $c-gray: #eee;
+$colorMainGreen: #3f5252;
+$colorMainOrange: #cd4d31;
+$colorWhite: #fff;
+$colorLightGray: #f1f5f4;
+
+$fontMain: "Playfair Display", serif;
+$fontSecondary: "Raleway", sans-serif;
+$column: 100px;
+$gridGap: 30px;
