--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -5,10 +5,10 @@
   column-gap: 30px;
   padding-top: 50px;
   padding-left: 55px;
-  margin: 0 auto 100px;
+  margin: 0 auto 50px;
 
   width: 1280px;
-  height: 457px;
+  height: 400px;
 
   @media screen and (max-width: 1280px) {
     grid-template-columns: 150px 1fr 1fr;
@@ -27,6 +27,21 @@
     grid-template-rows: 80px 336px 120px;
     gap: 40px 22px;
     height: 750px;
+  }
+
+  &__top {
+    display: block;
+    position: absolute;
+
+    @media screen and (max-width: 768px) {
+      width: 50px;
+      height: 50px;
+      border: 1px solid $darkGreen;
+      border-radius: 50%;
+      top: 450px;
+      left: 200px;
+      background: url(../images/line-top.svg) no-repeat center;
+    }
   }
 
   &__logos {
@@ -214,17 +229,17 @@
     position: relative;
     height: 17px;
     width: 270px;
-    left: -370%;
-    bottom: -110%;
+    left: -300%;
+    bottom: -100%;
 
     @media screen and (max-width: 1280px) {
       left: 0;
-      bottom: -70%;
+      bottom: -80%;
     }
 
     @media screen and (max-width: 768px) {
       left: 20px;
-      top: 100px;
+      top: 70px;
     }
   }
 
@@ -235,16 +250,16 @@
     height: 17px;
     width: 200px;
     left: -150%;
-    bottom: -110%;
+    bottom: -100%;
 
     @media screen and (max-width: 1280px) {
       left: 40%;
-      bottom: -70%;
+      bottom: -80%;
     }
 
     @media screen and (max-width: 768px) {
       left: -110px;
-      top: 70px;
+      top: 40px;
     }
   }
 }
