--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -20,38 +20,41 @@
   }
 
   &__nav2 {
-    display: none;
-    width: 100%;
-    background-color: yellowgreen;
+    z-index: 3;
+    top: -15px;
 
-    &__list {
-      height: 90px;
-      align-items: flex-end;
-      font-family: $Oswald;
-      font-size: 14px;
-      padding-bottom: 14px;
-
-      text-decoration: none;
-    }
-
-    &__item {
-      display: inline-flex;
-      align-content: flex-end;
-      line-height: 100%;
-    }
-
-    &__link {
-      list-style: none;
-      text-decoration: none;
-      color: $darkGrey;
-    }
+    position: absolute;
+    visibility: hidden;
   }
 }
 
-.header__nav2:hover {
-  display: block;
-}
+.nav2 {
+  &__list {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+  }
 
-.burger:active .header__nav2 {
-  display: block;
+  &__item {
+    display: flex;
+  }
+
+  &__link {
+    text-decoration: none;
+    color: $classicWhite;
+    margin-bottom: 20px;
+
+    font-family: $Montserrat;
+    font-size: 24px;
+    line-height: 150%;
+    transition: color 0.5s;
+  }
+
+  &__link:hover {
+    color: $classicRed;
+  }
 }
