--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $classicRed: red;
 $classicBlack:  #000;
 $classicWhite: #fff;
 $pageColor: #f0eeee;
+$HoverShadow: 0 3px 2px rgba(0, 0, 0, 0.15);
 
 $Montserrat: "Montserrat", sans-serif;
 $IBM:  "IBM Plex Sans", sans-serif;
