block footer was created

--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -9,9 +9,14 @@ body {
 h1,
 h2,
 h3,
+h4,
 p {
   margin: 0;
   padding: 0;
+}
+
+h4 {
+  margin-bottom: 20px;
 }
 
 a {
@@ -22,4 +27,10 @@ a {
 
 button {
   border: none;
+}
+
+ul {
+  list-style-type: none ;
+  margin: 0;
+  padding: 0;
 }
