--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -41,6 +41,21 @@
   font-weight: 400;
 }
 
+@mixin footer-titles-text {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 400;
+  color: #0f0e08;
+}
+
+@mixin footer-text {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: 400;
+}
+
 @mixin mediumScreen {
   @media (max-width: 1570px) {
     @content;
