adaptation to the mobile version

--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -1,8 +1,17 @@
+.footer-nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-info {
+  display: flex;
+  justify-content: space-between;
+}
+
 .footer {
   &__info {
     display: flex;
     justify-content: space-between;
-
   }
 
   &__line {
@@ -21,5 +30,41 @@
   &__img {
     margin-top: 65px;
     margin-right: 20px;
+
+    &:hover {
+      transform: rotate(35deg);
+    }
   }
+}
+
+@include onIpadMini {
+  .footer {
+    &__info {
+      flex-direction: column;
+    }
+    &__line {
+      width: 260px;
+      height: 1px;
+
+      margin-top: 50px;
+    }
+  }
+
+  .footer-nav {
+    margin-top: 50px;
+  }
+}
+
+@include onMobile {
+  .icons {
+    display: flex;
+    justify-content: space-between;
+
+    margin-bottom: 40px;
+
+    &__img {
+      margin: 0;
+    }
+  }
+
 }
