--- a/src/styles/footer/schedule.scss
+++ b/src/styles/footer/schedule.scss
@@ -1,4 +1,6 @@
 .schedule {
+  margin-right: 22px;
+
   &__work {
     font-size: 14px;
     font-weight: 400;
@@ -8,5 +10,13 @@
   &__time {
     font-size: 14px;
     font-weight: 400;
+  }
+}
+
+@include onMobile {
+  .schedule {
+    &__time {
+      width: 130px;
+    }
   }
 }
