--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "utils/mixins";
 @import "utils/vars";
 @import "utils/reset";
+@import "utils/animation/animation";
 
 @import "header/header";
 
@@ -24,4 +25,43 @@
 
 html {
   font-family: "IBM Plex Sans", sans-serif;
+}
+
+.line {
+  width: 100%;
+  height: 3px;
+  background-color: black;
+  transition: 1s;
+}
+
+.insert__transition:hover .line__insert {
+  animation-name: run-line;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+.insert__transition:hover .line__insert-2 {
+  animation-name: run-line-2;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+.subscription:hover .line__subscription {
+  animation-name: line__sub;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+.subscription:hover .line__subscription-2 {
+  animation-name: line__sub-2;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
 }
