--- a/src/styles/section/current-events/dreams.scss
+++ b/src/styles/section/current-events/dreams.scss
@@ -29,7 +29,7 @@
   }
 }
 
-@media (max-width: 960px) {
+@include onIpad {
   .dreams {
     justify-content: flex-start;
     flex-wrap: wrap-reverse;
@@ -41,14 +41,17 @@
 
     &__text {
       justify-content: flex-start;
+      margin: 0;
     }
   }
 }
 
-@media (max-width: 320px) {
+@include onMobile {
   .dreams {
     &__img {
+      padding: 20px;
       transform: scale(1.2);
+      margin-bottom: 10px;
     }
   }
 }
