--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,41 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin onTV {
+  @media (max-width: 1599px) {
+    @content;
+  }
+}
+
+@mixin onTVMini {
+  @media (max-width: 1185px) {
+    @content;
+  }
+}
+
+@mixin onIpad {
+  @media (max-width: 960px) {
+    @content;
+  }
+}
+
+@mixin onIpadMini {
+  @media (max-width: 815px) {
+    @content;
+  }
+}
+
+@mixin onMobileMax {
+  @media (max-width: 640px) {
+    @content;
+  }
+}
+
+@mixin forGallery {
+  @media (max-width: 620px) {
+    @content;
+  }
+}
+
+@mixin onMobile {
+  @media (max-width: 321px) {
+    @content;
   }
 }
