--- a/src/styles/section/current-events/return.scss
+++ b/src/styles/section/current-events/return.scss
@@ -28,7 +28,7 @@
   }
 }
 
-@media (max-width: 960px) {
+@include onIpad {
   .return {
     flex-wrap: wrap;
     justify-content: flex-end;
@@ -39,14 +39,17 @@
 
     &__text {
       justify-content: flex-end;
+      margin: 0;
     }
   }
 }
 
-@media (max-width: 320px) {
+@include onMobile {
   .return {
     &__img {
+      padding: 20px;
       transform: scale(1.2);
+      margin-bottom: 10px;
     }
   }
 }
