--- a/src/styles/section/insert/insert__transition.scss
+++ b/src/styles/section/insert/insert__transition.scss
@@ -1,7 +1,10 @@
+@import "../../utils/animation/animation";
+
 .insert {
   margin-bottom: 100px;
   &__transition {
     position: relative;
+
     &__picture {
       width: 100vw;
       margin: 0 auto;
@@ -18,6 +21,10 @@
       box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
       transition: 1s;
+
+      &:hover {
+        transform: scale(0.9, 0.7);
+      }
     }
   }
 }
@@ -27,7 +34,7 @@
   justify-content: space-between;
 }
 
-@media (max-width: 815px) {
+@include onIpadMini {
   .insert__transition__picture {
     max-width: 100%;
   }
@@ -35,5 +42,19 @@
   .insert__transition__text {
     left: calc(50% - 450px / 2);
     width: 450px;
+  }
+}
+
+@include forGallery {
+  .insert__transition__picture {
+    height: 210px;
+  }
+
+  .insert__transition__text {
+    padding: 25px 20px;
+    left: calc(50% - 280px / 2);
+    bottom: -100px;
+    width: 280px;
+    height: 150px;
   }
 }
