--- a/src/styles/section/subscription/subscription.scss
+++ b/src/styles/section/subscription/subscription.scss
@@ -1,13 +1,16 @@
+@import "../../utils/animation/animation";
+
 .subscription {
   margin-top: 60px;
   position: relative;
 
   &__picture {
     max-width: 100%;
-    margin: 0 auto;
+    margin: 3px auto;
     object-fit: cover;
     width: 100vw;
     object-position: top center;
+    transition: 1s;
   }
 
   &__text {
@@ -41,10 +44,7 @@
   &__input {
     width: 450px;
     height: 70px;
-
-    &::placeholder {
-      padding: 35px;
-    }
+    padding: 0 35px;
   }
 
   &__button {
@@ -53,7 +53,7 @@
   }
 }
 
-@media (max-width: 990px) {
+@include onIpad {
   .subscription {
     &__text {
       left: calc(50% - 400px / 2);
@@ -73,6 +73,41 @@
 
     &__paragraph {
       margin-bottom: 20px;
+    }
+  }
+}
+
+@include forGallery {
+  .subscription {
+    &__picture {
+      height: 210px;
+    }
+
+    &__text {
+      left: calc(50% - 280px / 2);
+      width: 280px;
+    }
+
+    &__input {
+      width: 230px;
+      height: 50px;
+    }
+
+    &__title {
+      font-size: 36px;
+      margin-bottom: 5px;
+    }
+
+    &__paragraph {
+      margin-bottom: 20px;
+    }
+  }
+}
+
+@include onMobile {
+  .subscription {
+    &__picture {
+      height: 386px;
     }
   }
 }
