--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -19,7 +19,7 @@
   &__burger {
     display: inline-block;
     width: 25px;
-    //height: 20px;
+    height: 20px;
     margin-right: 40px;
   }
 
