--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,6 +3,8 @@ $colorMainGreen: #3f5252;
 $colorMainOrange: #cd4d31;
 $colorWhite: #fff;
 $colorLightGray: #f1f5f4;
+$colorBlack: #1c1b29;
+$colorText: #504f5e;
 
 $fontMain: "Playfair Display", serif;
 $fontSecondary: "Raleway", sans-serif;
