added header display none

--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -1,3 +1,5 @@
+@import "../utils/animation/animation";
+
 .footer-nav {
   display: flex;
   justify-content: space-between;
@@ -30,10 +32,6 @@
   &__img {
     margin-top: 65px;
     margin-right: 20px;
-
-    &:hover {
-      transform: rotate(35deg);
-    }
   }
 }
 
