--- a/src/styles/footer/nav.scss
+++ b/src/styles/footer/nav.scss
@@ -1,9 +1,9 @@
 .nav {
-  &__item {
+  &__item-footer {
     margin-bottom: 20px;
   }
 
-  &__item--second {
+  &__item-footer--second {
     margin-left: 20px;
   }
 }
