--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -1,20 +1,30 @@
 .header {
   position: relative;
-  display: flex;
-  justify-content: space-between;
-
-  height: 665px;
-
-  &__photo__museum {
-    position: absolute;
-    right: 0;
-    object-fit: cover;
-    object-position: center;
+  display: none;
+  height: 655px;
+  &__nav {
+    display: none;
   }
 
-  &__text {
-    position: absolute;
-    top: calc(50% - 152px / 2);
-    z-index: 1;
+  &__title {
+    &__main {
+      font-family: Montserrat, sans-serif;
+      font-size: 72px;
+      line-height: 100%;
+      font-weight: 700;
+      &__span {
+        -webkit-text-stroke: 2px #000;
+        color: transparent;
+      }
+    }
+  }
+
+  &__photo {
+    display: block;
+    flex: 0 0 70%;
+    object-fit: cover;
+    width: 70vw;
+    height: 655px;
+    object-position: center;
   }
 }
