--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,21 @@ html {
   font-family: "IBM Plex Sans", sans-serif;
 }
 
+.name:hover .name__picture__rectangle {
+  animation-name: rectangle-rotate;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+.text-picture:hover {
+  animation-name: test;
+  animation-duration: 1s;
+  animation-iteration-count: 2;
+  animation-direction: alternate;
+}
+
 .line {
   width: 100%;
   height: 3px;
@@ -36,7 +51,7 @@ html {
 
 .insert__transition:hover .line__insert {
   animation-name: run-line;
-  animation-duration: 5s;
+  animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-timing-function: linear;
@@ -44,7 +59,7 @@ html {
 
 .insert__transition:hover .line__insert-2 {
   animation-name: run-line-2;
-  animation-duration: 5s;
+  animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-timing-function: linear;
@@ -52,7 +67,7 @@ html {
 
 .subscription:hover .line__subscription {
   animation-name: line__sub;
-  animation-duration: 5s;
+  animation-duration: 1s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-timing-function: linear;
@@ -60,7 +75,15 @@ html {
 
 .subscription:hover .line__subscription-2 {
   animation-name: line__sub-2;
-  animation-duration: 5s;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+.icons__img:hover {
+  animation-name: icons-rotate;
+  animation-duration: 0.5s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-timing-function: linear;
