--- a/src/styles/section/insert/insert__transition.scss
+++ b/src/styles/section/insert/insert__transition.scss
@@ -6,6 +6,7 @@
     position: relative;
 
     &__picture {
+      max-width: 100%;
       width: 100vw;
       margin: 0 auto;
       object-position: center;
