--- a/src/styles/utils/animation/animation.scss
+++ b/src/styles/utils/animation/animation.scss
@@ -94,3 +94,28 @@
     background-color: #0076ff;
   }
 }
+
+@keyframes icons-rotate {
+  0% {
+    transform: rotate(45deg);
+  }
+  50% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(-45deg);
+  }
+}
+
+@keyframes rectangle-rotate {
+  0% {
+    transform-origin: center;
+    transform: rotate(360deg);
+  }
+
+  100% {
+    transform-origin: center;
+    transform: rotate(-360deg);
+  }
+}
