--- a/src/styles/exhibitions.scss
+++ b/src/styles/exhibitions.scss
@@ -22,7 +22,7 @@
 
   &__title {
     @include title(48px, 58px, $colorBlack);
-    text-align: center;
+    margin-left: $column * 3;
     margin-bottom: $column;
   }
 
