--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import "reset";
 @import "header";
 @import "exhibitions";
+@import "events";
 
 body {
   background: $c-gray;
@@ -44,6 +45,6 @@ body {
   }
 
   &-link {
-    @include smallText($colorBlack)
+    @include smallText($colorBlack);
   }
 }
