menu+hamburger menu

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "_reset";
+@import "header";
+@import "menu";
+@import "nav";
+
+html {
+  background: #e5e5e5;
+  scroll-behavior: smooth;
+}
 
 body {
-  background: $c-gray;
+  background: transparent;
+  max-width: 1920px;
+  margin: 0 auto;
 }
